--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <section class="wrapper">
             <div id="content">
-                <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs and books, I can be found traveling, hiking and searching for new stories.</p>
+                <p> I have a deep passion for <span>creating visually appealing</span> and <span>intuitive</span> websites. I specialize in front-end development, utilizing my expertise in HTML, CSS, and JavaScript to bring static designs to life. My proficiency in responsive design ensures that all projects I develop are optimized for users on all devices. </p>
             </div>
         </section>    
 
