Adjusted span location

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <section class="wrapper">
             <div id="content">
-                <p> I have a deep passion for <span>creating visually appealing</span> and <span>intuitive</span> websites. I specialize in front-end development, utilizing my expertise in HTML, CSS, and JavaScript to bring static designs to life. My proficiency in responsive design ensures that all projects I develop are optimized for users on all devices. </p>
+                <p> I have a deep passion for <span>creating visually appealing and intuitive websites</span>. I specialize in front-end development, utilizing my expertise in HTML, CSS, and JavaScript to bring static designs to life. My proficiency in responsive design ensures that all projects I develop are optimized for users on all devices. </p>
             </div>
         </section>    
 
